--- a/Scientific-Calculator/Scientific-Calculator.csproj
+++ b/Scientific-Calculator/Scientific-Calculator.csproj
@@ -48,4 +48,9 @@
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Remove="Resources\Fonts\Cairo-ExtraLight.ttf" />
+	  <None Remove="Resources\Fonts\Cairo-Light.ttf" />
+	</ItemGroup>
+
 </Project>
